fixed sidebar and post layout issues. Added read me buttons to home page

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -76,7 +76,7 @@ Craig's edits to Poole
   /* DELETE WHEN WIDTH AUTO */
 }
 .button.red {
-  background: none repeat scroll 0 0 #e0645c;
+  background: none repeat scroll 0 0 #ac4142;
   color: white;
 }
 .button.red:hover {
@@ -112,16 +112,21 @@ Craig's edits to Poole
   margin: 0 auto;
 }
 
-#circletag {
-    display: block;
-    width: 200px;
-    height: 200px;
-    background: #E6E7ED;
-    -moz-border-radius: 100px;
-    -webkit-border-radius: 100px;
-    background-image: url(/assets/craigmccaskill.jpeg);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-    margin: 20px auto;
+#profile-pic {
+  display: block;
+  width: 200px;
+  height: 200px;
+  background: #E6E7ED;
+  -moz-border-radius: 100px;
+  -webkit-border-radius: 100px;
+  background-image: url(/assets/craigmccaskill.jpeg);
+  background-position:50% 50%;
+  background-repeat:no-repeat;
+  margin: 20px auto;
+}
 
+.read-more {
+  float: right;
+  font-size: 13px;
+  color: white !important;
 }
